# ruststone

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Readme.md  Rendering.md  Roadmap.md  TODO.md  build_windows_release_bundle_assets.sh  start_server.sh
rs-client/: .gitignore  Cargo.toml
rs-client/assets/: command.txt
rs-client/assets/shaders/: atlas_pbr.wgsl
rs-client/assets/texturepack/: credits.txt  pack.mcmeta
rs-client/assets/texturepack/assets/minecraft/mcpatcher/: color.properties
rs-client/assets/texturepack/assets/minecraft/mcpatcher/sky/world0/: sky1.properties  sky10.properties  sky2.properties  sky3.properties  sky4.properties  sky5.properties  sky6.properties  sky7.properties  sky8.properties  sky9.properties
rs-client/src/: embedded_assets.rs  entities.rs  inventory_systems.rs  item_textures.rs  main.rs  message_handler.rs  movement_session.rs  plugins.rs  sim_interaction.rs  sim_systems.rs  timing.rs
rs-client/src/entity_model/: biped.rs  creeper.rs  mesh.rs  mod.rs  quadruped.rs  textures.rs  types.rs
rs-client/src/movement_session/: mod.rs  planner.rs  receive.rs  send.rs  state.rs  tests.rs
rs-client/src/net/: events.rs
rs-client/src/sim/: collision.rs  mod.rs  movement.rs  predict.rs  reconcile.rs  tests.rs  types.rs
rs-client/src/sim_interaction/: debug.rs  mod.rs  world.rs
rs-client/src/sim_systems/: camera.rs  simulation.rs  timing.rs
rs-entity/: Cargo.toml
rs-entity/src/: armor.rs  components.rs  entity_anim_spawn.rs  first_person.rs  item_textures.rs  lib.rs  local_player.rs  motion.rs  player_mesh.rs  registry.rs  remote_apply.rs  skins.rs  specs.rs
rs-entity/src/model/: armor.rs  mesh.rs  mod.rs  quadruped.rs  textures.rs
rs-net/: Cargo.toml
rs-net/src/: auth.rs  chunk_decode.rs  handle_packet.rs  lib.rs  outbound.rs  session.rs
rs-net/src/handle_packet/: audio.rs  chat.rs  entities.rs  inventory.rs  join_game.rs  mod.rs  scoreboard.rs  title.rs  world.rs
rs-protocol/: Cargo.toml
rs-protocol/src/: format.rs  item.rs  lib.rs  shared.rs  translate.rs
rs-protocol/src/protocol/: forge.rs  mapped_packet.rs  microsoft.rs  mod.rs  packet.rs  versions.rs
rs-protocol/src/protocol/versions/: v1_8_9.rs
rs-protocol/src/types/: metadata.rs  mod.rs  nibble.rs
rs-render/: Cargo.toml
rs-render/examples/: audit_missing_textures.rs
rs-render/src/: async_mesh.rs  block_display.rs  block_models.rs  block_textures.rs  camera.rs  chunk.rs  components.rs  debug.rs  dynamic_lights.rs  input.rs  lib.rs  lighting.rs  movement.rs  reflection.rs  world.rs
rs-render/src/block_models/: mod.rs  naming.rs
rs-render/src/chunk/: ao.rs  assets.rs  custom.rs  custom_shapes.rs  geometry.rs  mesh.rs  mod.rs  sampling.rs  shading.rs  store.rs  tests.rs  tint.rs  visibility.rs
rs-render/src/debug/: mod.rs  occlusion.rs  settings.rs  systems.rs
rs-render/src/lighting/: materials.rs  mod.rs  postprocess.rs  presets.rs  uniforms.rs
rs-sim/: Cargo.toml
rs-sim/src/: collision.rs  lib.rs  movement.rs  predict.rs  reconcile.rs  tests.rs  types.rs
rs-sim/src/movement/: aabb.rs  block_shapes.rs  mod.rs  simulate.rs  world.rs
rs-sound/: Cargo.toml
rs-sound/src/: events.rs  lib.rs  mappings.rs  runtime.rs
rs-ui/: Cargo.toml
rs-ui/src/: connect.rs  debug_items.rs  hud.rs  inventory_interaction.rs  inventory_ui.rs  item_icons.rs  lib.rs  options_persistence.rs  options_ui.rs  overlays.rs  state.rs  tooltips.rs
rs-utils/: Cargo.toml
rs-utils/src/: app.rs  assets.rs  chat.rs  entities.rs  inventory.rs  item_textures.rs  lib.rs  net_messages.rs  registry.rs  registry_ids_generated.rs  scoreboard.rs  sound.rs  world.rs
scripts/: check_rust_file_lengths.sh
