[workspace]
members = [
    "rs-client",
    "rs-entity",
    "rs-net",
    "rs-protocol",
    "rs-render",
    "rs-sound",
    "rs-sim",
    "rs-ui",
    "rs-utils",
]
exclude = ["leafish"]
resolver = "3"
default-run = "rs-client"

[workspace.dependencies]
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3.20"
