[package]
name = "rs-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_egui = "0.36.0"
rs-net = { version = "0.1.0", path = "../rs-net" }

rs-protocol = { version = "0.1.0", path = "../rs-protocol" }
rs-render = { version = "0.1.0", path = "../rs-render" }
rs-ui = { version = "0.1.0", path = "../rs-ui" }
tokio = { version = "1.47.1", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

