[package]
name = "rs-client"
version = "0.1.0"
edition = "2024"
default-run = "rs-client"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_egui = "0.36.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8.4"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rs-net = { version = "0.1.0", path = "../rs-net" }

rs-protocol = { version = "0.1.0", path = "../rs-protocol" }
rs-render = { version = "0.1.0", path = "../rs-render" }
rs-ui = { version = "0.1.0", path = "../rs-ui" }
rs-utils = { version = "0.1.0", path = "../rs-utils" }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
perf_timing = []
