[package]
name = "rs-entity"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.36.0"
crossbeam = "0.8.4"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rs-protocol = { version = "0.1.0", path = "../rs-protocol" }
rs-render = { version = "0.1.0", path = "../rs-render" }
rs-sim = { version = "0.1.0", path = "../rs-sim" }
rs-ui = { version = "0.1.0", path = "../rs-ui" }
rs-utils = { version = "0.1.0", path = "../rs-utils" }
tracing.workspace = true
