[package]
name = "rs-net"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
crossbeam = "0.8.4"
byteorder = "1.5"
base64 = "0.22"
serde_json = "1.0"
rand = "0.8"
rsa_public_encrypt_pkcs1 = "0.4"
dotenvy = "0.15"
rs-protocol = { path = "../rs-protocol" }
rs-utils = { version = "0.1.0", path = "../rs-utils" }
