[package]
name = "rs-render"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
rs-utils = { version = "0.1.0", path = "../rs-utils" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
