[package]
name = "rs-sound"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
rs-entity = { path = "../rs-entity" }
rs-render = { path = "../rs-render" }
rs-utils = { path = "../rs-utils" }
