[package]
name = "rs-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
bevy_egui = "0.36.0"
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rs-utils = { version = "0.1.0", path = "../rs-utils" }
rs-render = { version = "0.1.0", path = "../rs-render" }
