[package]
name = "rs-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.0"
bevy_egui = "0.36.0"
image = "0.25.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
rs-utils = { version = "0.1.0", path = "../rs-utils" }
rs-render = { version = "0.1.0", path = "../rs-render" }
